# Arabic-pdf-to-word

./: .gitignore  README.md  arabic-template.docx  celery_app.py  env.example  pipeline.py  pyproject.toml
api/: dependency.py  main.py
